# mewcode

./: .gitignore  .mewcode.yaml  README.md  checklist.md  plan.md  pyproject.toml  spec.md
.mewcode/: mcp-servers.example.yaml  settings.yaml.example
docs/: README.md
docs/ch2-initial-chat/: task.md
docs/ch3-tool-system/: checklist.md  plan.md  spec.md  task.md
docs/ch4-agent-loop/: checklist.md  plan.md  spec.md  task.md
docs/ch5-system-prompt/: checklist.md  plan.md  task.md
docs/ch6-permissions/: checklist.md  plan.md  spec.md  task.md
docs/ch7-mcp/: checklist.md  plan.md  spec.md  task.md
docs/ch8-context-management/: checklist.md  plan.md  spec.md  task.md
examples/: config.example.yaml
mewcode/: __init__.py  agent.py  cli.py  config.py  conversation.py  mcp.py  permissions.py  tui.py
mewcode/compact/: __init__.py  compact.py  const.py  layer1.py  layer2.py  recovery.py  state.py  summary_prompt.py  token.py
tests/: test_agent_cancel_timeout.py  test_agent_loop.py  test_agent_permissions.py  test_agent_plan_only.py  test_agent_tool_flow.py  test_agent_tool_scheduler.py  test_anthropic_provider.py  test_config.py  test_conversation.py  test_mcp.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_tool.py  test_openai_provider.py  test_openai_tool_calls.py  test_permissions.py  test_prompts_environment.py  test_prompts_modules.py  test_prompts_reminder.py  test_provider_factory.py  test_sse.py  test_tools_base.py  test_tools_command.py  test_tools_file.py  test_tools_registry.py  test_tools_search.py  test_tools_security.py  test_tui_flow.py
(+21 files in other folders)
