[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mewcode"
version = "0.1.0"
description = "MewCode 是一个终端 AI 编程助手。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mewcode = "mewcode.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
